--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=Simion_says
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/PuzzleBP/Maps/PuzzleExampleMap.PuzzleExampleMap
+EditorStartupMap=/Game/PuzzleBP/Maps/Menu.Menu
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -11,7 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/PuzzleBP/Maps/PuzzleExampleMap.PuzzleExampleMap
+GameDefaultMap=/Game/PuzzleBP/Maps/Menu.Menu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/PuzzleBP/Blueprints/PuzzleGameMode.PuzzleGameMode_C
 GlobalDefaultServerGameMode=None
